--- a/CCN-Solution.ColisDDD/CCN_Solution.ColisDDD.Infrastructure.Persistence/CCN_Solution.ColisDDD.Infrastructure.Persistence.csproj
+++ b/CCN-Solution.ColisDDD/CCN_Solution.ColisDDD.Infrastructure.Persistence/CCN_Solution.ColisDDD.Infrastructure.Persistence.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
