--- a/CCN-Solution.ColisDDD/CCN_Solution.ColisDDD.WebApi/appsettings.json
+++ b/CCN-Solution.ColisDDD/CCN_Solution.ColisDDD.WebApi/appsettings.json
@@ -1,56 +1,56 @@
 {
-  "UseInMemoryDatabase": false,
+    "https_port": 443,
+    "UseInMemoryDatabase": false,
   "ConnectionStrings": {
+    // "DefaultConnection": "Server=35.180.231.169,1433;Initial Catalog=ManageColisDB;Persist Security Info=False;User ID={our_userID};Password={our_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=tcp:localhost,1433;Initial Catalog=ManageColisDB;User Id=sa;Password=badar@313;"
     "DefaultConnection": "Data Source=DIOUM2TOUBA\\DIOUM2TOUBA;Initial Catalog=ManageColisDB;Integrated Security=True;MultipleActiveResultSets=True"
-    // "DefaultConnection": "server=localhost;user Id=root;password=admin;database=ManageColisDatabase;"
-  },
-  "Serilog": {
-    "Using": [],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
+  }, 
+    "Serilog": {
+        "Using": [],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [{
+            "Name": "Console"
+        }],
+        "Enrich": [
+            "FromLogContext",
+            "WithMachineName",
+            "WithProcessId",
+            "WithThreadId"
+        ],
+        "Properties": {
+            "ApplicationName": "Serilog.WebApplication"
+        }
     },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithProcessId",
-      "WithThreadId"
-    ],
-    "Properties": {
-      "ApplicationName": "Serilog.WebApplication"
+    "MailSettings": {
+        "EmailFrom": "info@codewithmukesh.com",
+        "SmtpHost": "smtp.ethereal.email",
+        "SmtpPort": 587,
+        "SmtpUser": "doyle.sauer@ethereal.email",
+        "SmtpPass": "6X4wBQQYgU14F23VYc",
+        "DisplayName": "Mukesh Murugan"
+    },
+    "JWTSettings": {
+        "Key": "KEZX7FSBLGHBE4L3EU7I24VI7NWIHE4I",
+        "Issuer": "CoreIdentity",
+        "Audience": "CoreIdentityUser",
+        "DurationInMinutes": 60
+    },
+    "AllowedHosts": "*",
+    "PathNLogConfig": "C:\\Users\\DIOUM2TOUBA\\Documents\\Projets .Net\\Person\\CCNSolution.Colis-DDD\\CCNSolution.ColisDDD.LoggerService\\",
+    "SGBDType": "SqlServer",
+    "Swagger_Dev": {
+        "Url": "/swagger/v1/swagger.json",
+        "Key": "CCN Group - Colis DEM DIKK"
+    },
+    "Swagger_Prod": {
+        "Url": "/colisddd/swagger/v1/swagger.json",
+        "Key": "CCN Group - Colis DEM DIKK"
     }
-  },
-  "MailSettings": {
-    "EmailFrom": "info@codewithmukesh.com",
-    "SmtpHost": "smtp.ethereal.email",
-    "SmtpPort": 587,
-    "SmtpUser": "doyle.sauer@ethereal.email",
-    "SmtpPass": "6X4wBQQYgU14F23VYc",
-    "DisplayName": "Mukesh Murugan"
-  },
-  "JWTSettings": {
-    "Key": "KEZX7FSBLGHBE4L3EU7I24VI7NWIHE4I",
-    "Issuer": "CoreIdentity",
-    "Audience": "CoreIdentityUser",
-    "DurationInMinutes": 60
-  },
-  "AllowedHosts": "*",
-  "PathNLogConfig": "C:\\Users\\DIOUM2TOUBA\\Documents\\Projets .Net\\Person\\CCNSolution.Colis-DDD\\CCNSolution.ColisDDD.LoggerService\\",
-  "SGBDType": "SqlServer",
-  "Swagger_Dev": {
-    "Url": "/swagger/v1/swagger.json",
-    "Key": "CCN Group - Colis DEM DIKK"
-  },
-  "Swagger_Prod": {
-    "Url": "/colisddd/swagger/v1/swagger.json",
-    "Key": "CCN Group - Colis DEM DIKK"
-  }
 }
